--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:css": "node-sass stylesheets/sass/index.sass build/css/style.css -w"
+    "compile:css": "node-sass stylesheets/scss/index.scss stylesheets/css/index.css -w"
   },
   "repository": {
     "type": "git",
